# searchTool

./: .gitignore  2222 - 副本.py  22222.py  2223.py  2224.py  2225.py  2226.py  2227.py  2228.py  2229.py  2230.py  2231.py  2232.py  2233.py  2234.py  2245.py  2246.py  2247.py  2248.py  2249.py  2250.py  2250_Gao-Xing-Neng-Ban_optimized.py  2250_Gao-Xing-Neng-Ban_realtime_mod.py  32 - 副本 - 副本.py  32.py  ARCHITECTURE.md  CODE_REVIEW_CHECKLIST.md  CODE_VERIFICATION_REPORT.md  COMPLETE_FEATURE_LIST.md  COMPLETE_FEATURE_STATUS.md  Cargo.toml  EXECUTIVE_SUMMARY.md  FEATURE_CHECKLIST.md  FINAL_DELIVERY_CHECKLIST.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_TEST_REPORT.md  MODERN_UI_UPGRADE.md  PROJECT_FILE_INVENTORY.md  PROJECT_REPORT.md  QUICKSTART.md  (+52 more)
.github/workflows/: ci-tests.yml
file_search_refactored_B_fixed3/: README.md  main.py  requirements.txt
file_search_refactored_B_fixed3/config/: manager.py
file_search_refactored_B_fixed3/core/: __init__.py  index_manager.py  mft.py
file_search_refactored_B_fixed3/monitors/: __init__.py  usn_watcher.py
file_search_refactored_B_fixed3/system/: __init__.py  hotkey.py  tray.py
file_search_refactored_B_fixed3/tests/: regression_smoke.py
file_search_refactored_B_fixed3/ui/: __init__.py  batch_rename.py  cdrive_dialog.py  index_worker.py  main_window.py  mini_search.py  realtime_worker.py  themes.py
file_search_refactored_B_fixed3/utils/: constants.py  helpers.py
filesearch/: ENHANCEMENT_SUMMARY.md  QUICK_REFERENCE.md  SEARCH_SYNTAX.md  UI_TEXT_DISPLAY_FIX.md  __init__.py  config.py  demo_search_syntax.py  rebuild_rust_index.py  requirements-dev.txt  utils.py
filesearch - 副本1/: config.py  constants.py  legacy.py  main.py  utils.py
filesearch - 副本1/core/: __init__.py  dependencies.py  index_manager.py  search_workers.py
filesearch - 副本1/ui/: hotkey_manager.py  (+3 more)
scripts/: migrate_remove_fuzzy_keys.py
src/: commands.rs  commands_old.rs  config.rs  database.rs  filter.rs  hotkey.rs  index_engine.rs  lib.rs  main.rs  mft.rs  search_index.rs  search_syntax.rs  shortcuts.rs  tray.rs
tests/: test_backend.rs
tools/: run_tests.ps1
windows/: manifest.rc  manifest.xml
历史文件/: search.py
(+72 files in other folders)
