[package]
name = "filesearch"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "global-shortcut", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rayon = "1.7"
walkdir = "2"
regex = "1"
chrono = "0.4"
crossbeam = "0.8"
parking_lot = "0.12"
indexmap = "2"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_System_Registry",
] }

[build-dependencies]
tauri-build = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
