[package]
name = "filesearch"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "filesearch"
path = "src/main.rs"

[lib]
name = "file_scanner_engine"
crate-type = ["cdylib", "rlib"]  # cdylib for Python FFI, rlib for internal use

[dependencies]
tauri = { version = "1.5", features = ["fs-all", "global-shortcut-all", "shell-all", "window-all"] }
rayon = "1.10"
rustc-hash = "1.1"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
radix_trie = "0.2"
memmap2 = "0.9"
memchr = "2.7"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
regex = "1"
chrono = "0.4"
crossbeam = "0.8"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
dirs = "5.0"

[dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_System_Registry",
]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
embed-resource = "2.5"

[profile.release]
opt-level = 3
lto = "thin"        # 薄链接时优化，比full LTO快
codegen-units = 16  # 增加并行编译单元（默认16，可以提高到32）
incremental = true  # 启用增量编译

[profile.dev]
opt-level = 1       # dev模式也做基本优化，性能不会太差
incremental = true  # dev模式启用增量编译
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
